--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,5 +1,6 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
+  /* Check what colors are still needed */
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -19,6 +20,15 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --dark-mode-bg: rgb(0, 50, 63);
+  --dark-mode-text: rgb(238,232,213);
+  --dark-mode-text-highlight: rgb(181,137,0);
+  --dark-mode-orange: rgb(203,75,22);
+  --dark-mode-green: rgb(133,153,0);
+  --dark-mode-blue: rgb(38,139,210);
+  --dark-mode-purple: rgb(133, 0, 64);
+  --dark-mode-cyan: rgb(42,161,152);
 }
 
 /* semantic color variables for this project */
