--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,11 @@ a,
   }
 }
 
+.text-highlight {
+  color: var(--dark-mode-text-highlight);
+}
+
+
 .orange {
   color: var(--dark-mode-orange);
 }
