--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,72 +1,20 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  /* Check what colors are still needed */
-  --vt-c-white: #ffffff;
-  --vt-c-white-soft: #f8f8f8;
-  --vt-c-white-mute: #f2f2f2;
-
-  --vt-c-black: #181818;
-  --vt-c-black-soft: #222222;
-  --vt-c-black-mute: #282828;
-
-  --vt-c-indigo: #1474d4;
-
-  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
-
-  --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
-  --vt-c-text-dark-1: var(--vt-c-white);
-  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-
-  --dark-mode-bg: rgb(0, 50, 63);
-  --dark-mode-text: rgb(238,232,213);
-  --dark-mode-text-highlight: rgb(181,137,0);
-  --dark-mode-orange: rgb(203,75,22);
+  --dark-mode-bg: rgb(26, 83, 92);
+  --dark-mode-text: rgb(247,255,247);
+  --dark-mode-red: rgb(255,107,107);
+  --dark-mode-yellow: rgb(255,230,109);
   --dark-mode-green: rgb(133,153,0);
+    
+  --dark-mode-text-highlight: rgb(0, 137, 66);
+  --dark-mode-orange: rgb(203,75,22);
+
   --dark-mode-blue: rgb(38,139,210);
   --dark-mode-purple: rgb(133, 0, 64);
   --dark-mode-cyan: rgb(42,161,152);
+  --dashboard-entry-color: rgb(0, 101, 123);
 }
 
-/* semantic color variables for this project */
-:root {
-  --color-background: var(--vt-c-white);
-  --color-background-soft: var(--vt-c-white-soft);
-  --color-background-mute: var(--vt-c-white-mute);
-
-  --color-border: var(--vt-c-divider-light-2);
-  --color-border-hover: var(--vt-c-divider-light-1);
-
-  --color-heading: var(--vt-c-text-light-1);
-  --color-text: var(--vt-c-text-light-1);
-
-  --section-gap: 160px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
-
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
-
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
 
 body {
   min-height: 100vh;
