--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,4 +1,3 @@
-/* color palette from <https://github.com/vuejs/theme> */
 :root {
   --dark-mode-bg: rgb(26, 83, 92);
   --dark-mode-text: rgb(247,255,247);
@@ -18,8 +17,8 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
+  color: var(--dark-mode-text);
+  background: var(--dark-mode-bg);
   transition:
     color 0.5s,
     background-color 0.5s;
